Fix HTML test files

--- a/src/test/resources/pages/instructorEditStudentFeedbackPageOpen.html
+++ b/src/test/resources/pages/instructorEditStudentFeedbackPageOpen.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     4
                   </span>
                   words
