--- a/src/test/resources/pages/instructorFeedbackSubmitPageClosed.html
+++ b/src/test/resources/pages/instructorFeedbackSubmitPageClosed.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -200,7 +200,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-1" style="color: gray;">
                     0
                   </span>
                   words
@@ -254,7 +254,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-2" style="color: gray;">
                     0
                   </span>
                   words
@@ -308,7 +308,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-3" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-3" style="color: gray;">
                     0
                   </span>
                   words
