--- a/src/test/resources/pages/instructorFeedbackSubmitPageOpen.html
+++ b/src/test/resources/pages/instructorFeedbackSubmitPageOpen.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -221,7 +221,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -281,7 +281,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-1" style="color: gray;">
                     0
                   </span>
                   words
@@ -341,7 +341,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-2" style="color: gray;">
                     0
                   </span>
                   words
@@ -412,7 +412,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -492,7 +492,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -546,7 +546,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-1" style="color: gray;">
                     0
                   </span>
                   words
@@ -600,7 +600,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-2" style="color: gray;">
                     0
                   </span>
                   words
@@ -654,7 +654,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-3" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-3" style="color: gray;">
                     0
                   </span>
                   words
