--- a/src/test/resources/pages/instructorFeedbackSubmitPagePartiallyFilled.html
+++ b/src/test/resources/pages/instructorFeedbackSubmitPagePartiallyFilled.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     3
                   </span>
                   words
@@ -222,7 +222,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-0" style="color: gray;">
                     3
                   </span>
                   words
@@ -283,7 +283,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-1" style="color: gray;">
                     9
                   </span>
                   words
@@ -344,7 +344,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-2" style="color: gray;">
                     4
                   </span>
                   words
@@ -416,7 +416,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -496,7 +496,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-0" style="color: gray;">
                     4
                   </span>
                   words
@@ -551,7 +551,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-1" style="color: gray;">
                     0
                   </span>
                   words
@@ -605,7 +605,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-2" style="color: gray;">
                     0
                   </span>
                   words
@@ -659,7 +659,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-3" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-3" style="color: gray;">
                     0
                   </span>
                   words
