--- a/src/test/resources/pages/newlyJoinedInstructorStudentFeedbackSubmissionEdit.html
+++ b/src/test/resources/pages/newlyJoinedInstructorStudentFeedbackSubmissionEdit.html
@@ -834,7 +834,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-0" style="color: gray;">
                     22
                   </span>
                   words
@@ -912,7 +912,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-0" style="color: gray;">
                     28
                   </span>
                   words
@@ -964,7 +964,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-1" style="color: gray;">
                     12
                   </span>
                   words
@@ -1016,7 +1016,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-2" style="color: gray;">
                     22
                   </span>
                   words
@@ -1088,7 +1088,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-0" style="color: gray;">
                     16
                   </span>
                   words
@@ -1169,7 +1169,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-5-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-5-0" style="color: gray;">
                     13
                   </span>
                   words
@@ -1221,7 +1221,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-5-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-5-1" style="color: gray;">
                     3
                   </span>
                   words
@@ -1273,7 +1273,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-5-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-5-2" style="color: gray;">
                     6
                   </span>
                   words
