--- a/src/test/resources/pages/studentFeedbackSubmitPagePartiallyFilled.html
+++ b/src/test/resources/pages/studentFeedbackSubmitPagePartiallyFilled.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     3
                   </span>
                   words
@@ -234,7 +234,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-0" style="color: gray;">
                     3
                   </span>
                   words
@@ -292,7 +292,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-1" style="color: gray;">
                     9
                   </span>
                   words
@@ -350,7 +350,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-2" style="color: gray;">
                     4
                   </span>
                   words
@@ -425,7 +425,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -502,7 +502,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-0" style="color: gray;">
                     4
                   </span>
                   words
@@ -551,7 +551,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-1" style="color: gray;">
                     0
                   </span>
                   words
@@ -622,7 +622,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-5-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-5-0" style="color: gray;">
                     0
                   </span>
                   words
