--- a/src/test/resources/pages/studentFeedbackSubmitPagePreview.html
+++ b/src/test/resources/pages/studentFeedbackSubmitPagePreview.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -234,7 +234,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-0" style="color: gray;">
                     0
                   </span>
                   words
