--- a/src/test/resources/pages/unregisteredStudentFeedbackSubmitPagePartiallyFilled.html
+++ b/src/test/resources/pages/unregisteredStudentFeedbackSubmitPagePartiallyFilled.html
@@ -161,7 +161,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     3
                   </span>
                   words
@@ -251,7 +251,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-0" style="color: gray;">
                     7
                   </span>
                   words
@@ -309,7 +309,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-1" style="color: gray;">
                     3
                   </span>
                   words
@@ -367,7 +367,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-2" style="color: gray;">
                     4
                   </span>
                   words
@@ -442,7 +442,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -519,7 +519,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-0" style="color: gray;">
                     4
                   </span>
                   words
@@ -568,7 +568,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-1" style="color: gray;">
                     0
                   </span>
                   words
@@ -645,7 +645,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-5-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-5-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -696,7 +696,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-5-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-5-1" style="color: gray;">
                     0
                   </span>
                   words
@@ -747,7 +747,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-5-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-5-2" style="color: gray;">
                     0
                   </span>
                   words
