--- a/src/test/resources/pages/instructorFeedbackSubmitPageModified.html
+++ b/src/test/resources/pages/instructorFeedbackSubmitPageModified.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     3
                   </span>
                   words
@@ -219,7 +219,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-0" style="color: gray;">
                     4
                   </span>
                   words
@@ -277,7 +277,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-1" style="color: gray;">
                     4
                   </span>
                   words
@@ -335,7 +335,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-2-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-2-2" style="color: gray;">
                     0
                   </span>
                   words
@@ -406,7 +406,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-3-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-3-0" style="color: gray;">
                     3
                   </span>
                   words
@@ -487,7 +487,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-0" style="color: gray;">
                     4
                   </span>
                   words
@@ -542,7 +542,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-1" style="color: gray;">
                     4
                   </span>
                   words
@@ -597,7 +597,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-2" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-2" style="color: gray;">
                     4
                   </span>
                   words
@@ -652,7 +652,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-4-3" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-4-3" style="color: gray;">
                     4
                   </span>
                   words
