--- a/src/test/resources/pages/instructorFeedbackSubmitPagePreview.html
+++ b/src/test/resources/pages/instructorFeedbackSubmitPagePreview.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-0" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-0" style="color: gray;">
                     0
                   </span>
                   words
@@ -199,7 +199,7 @@
                 </div>
                 <div class="pull-right">
                   Response length:
-                  <span id="responseLength-1-1" style="color: rgb(128, 128, 128);">
+                  <span id="responseLength-1-1" style="color: gray;">
                     0
                   </span>
                   words
